--- a/frontend/src/ChatWindow.css
+++ b/frontend/src/ChatWindow.css
@@ -50,13 +50,13 @@
 }
 
 .user-message {
-  background-color: #007bff;
+  background-color: #403d3d;
   color: white;
   margin-left: auto;
 }
 
 .bot-message {
-  background-color: #403d3d;
+  background-color: #302f2f;
   color: white;
   margin-right: auto;
 }
@@ -72,7 +72,7 @@
   flex: 1;
   padding: 5px;
   border: 1px solid #ced4da;
-  border-radius: 3px;
+  border-radius: 10px;
 }
 
 .chatbot-input button {
@@ -80,8 +80,9 @@
   background-color: #007bff;
   color: white;
   border: none;
-  border-radius: 3px;
+  border-radius: 30px;
   cursor: pointer;
+  font-size: 23px;
 }
 
 .chatbot-input button:hover {
