--- a/frontend/src/ChatWindow.css
+++ b/frontend/src/ChatWindow.css
@@ -13,20 +13,41 @@
   cursor: pointer;
 }
 
-.chatbot-button-closed {
-  background-color: #ff711a;
+button.chatbot-button-closed {
+  width: 80px;
+  height: 80px;
+  color: white;
+  border-radius: 50%;
+  background: radial-gradient(circle, #8B0304 0%, #8b0304 100%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+  transition: transform 0.3s ease;
 }
+
+.chatbot-button-closed span {
+  transform: scale(150%);
+}
+
 
 .chatbot-button-closed:hover {
   background-color: #c64e01;
+  transform: scale(1.1);
 }
-
-.chatbot-button-opened {
-  background-color: #afafaf;
+a.chatbot-button-opened {
+  position: absolute;
+  right: 1%;
+  top: 1%;
+  height: 10px;
+  width: 10px;
+  transform: scale(150%);
+  background: none;
+  color: #777575;
 }
 
 .chatbot-button-opened:hover {
-  background-color: #777575
+  border: 3px solid #8B0304;
 }
 
 .chatbot-window {
